--- a/rootdata/a.html
+++ b/rootdata/a.html
@@ -41,7 +41,7 @@
 <li><a id="blog_nav_newpost" class="menu" rel="nofollow" href="https://i.cnblogs.com/EditPosts.aspx?opt=1">新随笔</a></li>
 <li><a id="blog_nav_contact" class="menu" rel="nofollow" href="https://msg.cnblogs.com/send/_revolution">联系</a></li>
 <li><a id="blog_nav_rss" class="menu" href="https://www.cnblogs.com/revo/rss">订阅</a>
-<!--<a id="blog_nav_rss_image" class="aHeaderXML" href="https://www.cnblogs.com/revo/rss"><img src="//www.cnblogs.com/images/xml.gif" alt="订阅" /></a>--></li>
+<!--<a_pyplot id="blog_nav_rss_image" class="aHeaderXML" href="https://www.cnblogs.com/revo/rss"><img src="//www.cnblogs.com/images/xml.gif" alt="订阅" /></a_pyplot>--></li>
 <li><a id="blog_nav_admin" class="menu" rel="nofollow" href="https://i.cnblogs.com/">管理</a></li>
 </ul>
 		<div class="blogStats">
